Bug 62288 - RTF: Gap added inside tables (regression)
Summary: RTF: Gap added inside tables (regression)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.5.2 release
Hardware: Other Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: BSA target:4.1.0 target:4.0.3 regress...
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2013-03-13 11:05 UTC by mloc
Modified: 2015-12-15 22:18 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
RTF file causing bug (4.36 KB, text/rtf)
2013-03-13 11:05 UTC, mloc
Details
Correct rendering : PDF export from LibO 3.6.4 (38.23 KB, application/pdf)
2013-03-13 11:14 UTC, mloc
Details
Incorrect rendering : PDF export from LibO 4.0.2 (43.65 KB, application/pdf)
2013-03-13 11:15 UTC, mloc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mloc 2013-03-13 11:05:31 UTC
Created attachment 76463 [details]
RTF file causing bug

Problem description: 
Some space is added inside tables such as the one shown in RTF file attached, causing a severe alteration. Table is rendered correctly in Word 2003 and LibO 3.6.4

Alteration has been noticed in LibO 3.6.5 and LibO 4.0.1

Steps to reproduce:
1. Open attached file with LibO 3.6.4
2. Notice correct rendering
3. Open same file with LibO 3.6.5
4. Notice incorrect rendering

Current behavior:
Table columns and rows are mis-aligned.

Expected behavior:
A three rows and two columns table without so much lost vertical space.
Operating System: Windows 7
Version: 3.6.5.2 release
Last worked in: 3.6.4.3 release
Comment 1 mloc 2013-03-13 11:14:05 UTC
Created attachment 76464 [details]
Correct rendering : PDF export from LibO 3.6.4
Comment 2 mloc 2013-03-13 11:15:41 UTC
Created attachment 76465 [details]
Incorrect rendering : PDF export from LibO 4.0.2

Same result with LibO 3.6.5
Comment 3 Miklos Vajna 2013-03-22 09:04:14 UTC
Reproduced, this is caused by my 4a507f732d82c188ad81b022cbe3037951e58ac3, which was a fix for bug 57678.
Comment 4 Miklos Vajna 2013-03-22 10:09:21 UTC
Assign to me, I guess all we need is to fix margins of the table cell paragraphs here.
Comment 5 Commit Notification 2013-03-22 10:53:16 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=24d5261f5a122e22675210445056cdf67663237b

fdo#62288 fix RTF import of table paragraph margins



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Miklos Vajna 2013-03-22 12:00:25 UTC
-4-0 review: https://gerrit.libreoffice.org/2906
Comment 7 Commit Notification 2013-03-22 16:00:19 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cd8de6c4138d227a48d01b05212f5aaf53b67aab&h=libreoffice-4-0

fdo#62288 fix RTF import of table paragraph margins


It will be available in LibreOffice 4.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Björn Michaelsen 2013-04-22 19:15:06 UTC
@vmiklos: Since this is a regression in 3.6.5 against 3.6.0 can we maybe have that backported to 3.6. for 3.6.7? The patch looks simple enough to the untrained eye.
Comment 9 Miklos Vajna 2013-04-23 08:46:59 UTC
Here we go: https://gerrit.libreoffice.org/3572
Comment 10 Commit Notification 2013-04-23 10:33:49 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=562de768b5e80dd7d73302ad8307e1d7a734ec1c&h=libreoffice-3-6

fdo#62288 fix RTF import of table paragraph margins


It will be available in LibreOffice 3.6.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Robinson Tryon (qubit) 2015-12-15 22:18:21 UTC
Migrating Whiteboard tags to Keywords: (rtf_filter -> filter:rtf)
[NinjaEdit]